dark mode css fix

--- a/frontend/src/app/pages/events/event-page/components/registration-dialog/registration-location/registration-location.component.scss
+++ b/frontend/src/app/pages/events/event-page/components/registration-dialog/registration-location/registration-location.component.scss
@@ -14,10 +14,6 @@ article {
   }
 }
 
-.title-text {
-  color: var(--next-heading);
-}
-
 ul {
   margin: 5px 0;
   padding: 0;
