--- a/frontend/src/app/pages/events/event-registrations/event-registration-card/event-registration-card.component.scss
+++ b/frontend/src/app/pages/events/event-registrations/event-registration-card/event-registration-card.component.scss
@@ -68,7 +68,6 @@
   font-size: 18px;
   line-height: 1;
   font-weight: 700;
-  color: var(--next-heading);
 }
 
 .subtitle {
