--- a/frontend/src/app/pages/events/event-registrations/event-registrations.component.scss
+++ b/frontend/src/app/pages/events/event-registrations/event-registrations.component.scss
@@ -12,22 +12,6 @@ article {
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  margin: 4px 0;
-}
-
-.highlight {
-  color: var(--bright-blue-sky);
-  font-weight: 700;
-  font-size: larger;
-}
-
-.hint {
-  color: var(--next-note);
-  font-weight: 500;
-}
-
-.muted {
-  color: var(--next-muted);
 }
 
 ul {
@@ -46,7 +30,6 @@ ul {
 }
 
 .confirm-title {
-  color: var(--next-heading);
   font-weight: 700;
 }
 
@@ -57,6 +40,5 @@ ul {
 @media (min-width: 600px) {
   ul {
     gap: 10px;
-    //width: 70%;
   }
 }
